{
    "name": "InventoryInputs",
    "maps": [
        {
            "name": "InventoryInputs",
            "id": "67008775-acb1-438c-8bba-206a2f7acac1",
            "actions": [
                {
                    "name": "Top",
                    "type": "Button",
                    "id": "0022d5aa-3e7b-4130-b656-f089c9f63742",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Bottom",
                    "type": "Button",
                    "id": "4161451d-8479-4e47-af6e-1be0e0a3a5be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right",
                    "type": "Button",
                    "id": "c7437456-e430-4f46-877c-62d167fbe2d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Left",
                    "type": "Button",
                    "id": "e6be2cfb-4ac5-4c94-9c57-df8c4f75d1d1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClearItem",
                    "type": "Button",
                    "id": "6d432edd-1eb3-4e24-81ce-9e111c410e67",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickItem",
                    "type": "Button",
                    "id": "c54cbfd9-379f-4668-b365-ececdfdb358f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NextResolution",
                    "type": "Button",
                    "id": "5d699b50-e1d9-427b-9551-fd3eb1cb2434",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrevResolution",
                    "type": "Button",
                    "id": "3fe23c9a-ecc2-421a-8332-c9203c5d1b73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7ab321a3-954f-4b27-a7ff-52951672c21b",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Top",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2689e2a7-35e1-4f84-85e2-ca32d68ced6c",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.997,max=1)",
                    "groups": "Gamepad",
                    "action": "Top",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7b188c2b-9dcd-47ff-b1a4-5fd3779e93f6",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Bottom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64ebab3b-a06a-42d7-8d30-07b80ebbcd64",
                    "path": "<Gamepad>/leftStick/down",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.997,max=1)",
                    "groups": "Gamepad",
                    "action": "Bottom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d55e2f35-82b1-459c-a649-44773253efb2",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "886a66ba-5173-4cbb-bf76-df111652029b",
                    "path": "<Gamepad>/leftStick/right",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.997,max=1)",
                    "groups": "Gamepad",
                    "action": "Right",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14b257ee-e44c-4ef1-98b2-2fd061a720a6",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64caf340-c718-4e3f-bc78-f4ea4cc80a20",
                    "path": "<Gamepad>/leftStick/left",
                    "interactions": "",
                    "processors": "AxisDeadzone(min=0.997,max=1)",
                    "groups": "Gamepad",
                    "action": "Left",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02b17b16-267e-4311-b9db-9b87873ebf83",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Gamepad",
                    "action": "ClearItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e2443e84-3177-4988-9e95-3913d6fb60f6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6baab515-4a8b-4023-922e-594e05a4a8f1",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NextResolution",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c66122bc-d05b-4504-a46b-2ec4b23c1921",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrevResolution",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Gamepad",
            "bindingGroup": "Gamepad",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}